[package]
name = "fts_pdbsrc"
version = "0.1.0"
edition = "2018"

[dependencies]
aes-gcm = "0.9.4"
anyhow = "1.0"
hex = "0.4.3"
pdb = "0.7.0"
rand = "0.8.4"
regex = "1.5.4"
rmp-serde = "0.15.5"
serde = { version="1.0.130", features=["derive"]}
serde_json = "1.0"
structopt = "0.3.14"
subprocess = "0.2.7"
tempfile = "3.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
windows-service = "0.4.0"
which = "4.2.2"

[workspace]
members = [
    "fts_pdbsrc_service"
]