[package]
name = "fts_pdbsrc_service"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
dirs = "3.0.2"
hotwatch = "0.4.6"
log = "0.4.14"
num_cpus = "1.13.0"
pdb = "0.7.0"
rmp-serde = "0.15.5"
serde = { version="1.0.130", features=["derive"]}
serde_json = "1.0"
simplelog = "0.10.0"
structopt = "0.3.14"
subprocess = "0.2.7"
tempfile = "3.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
walkdir = "2.3.2"
windows-service = "0.4.0"